--- a/Hotel_Reservations_Prediction.ipynb
+++ b/Hotel_Reservations_Prediction.ipynb
@@ -9,6 +9,13 @@
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
+    "from sklearn.preprocessing import LabelEncoder\n",
+    "\n",
+    "from sklearn.preprocessing import MinMaxScaler\n",
+    "from sklearn.feature_selection import SelectKBest, chi2, RFE, SelectFromModel\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from lightgbm import LGBMClassifier\n",
     "\n",
     "import matplotlib.pyplot as plot"
    ]
@@ -586,122 +593,41 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "8e2782c3",
+   "metadata": {},
+   "source": [
+    "### Observations:\n",
+    "The items below were dropped from the dataset, since they didn't increase the accuracy of the model, moreover, they were categorical items. \n",
+    "- room_type_reserved\n",
+    "- type_of_meal_plan\n",
+    "- Booking_ID"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "3b63c58c",
+   "id": "77611423",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Room_Type 1    28130\n",
-       "Room_Type 2      692\n",
-       "Room_Type 3        7\n",
-       "Room_Type 4     6057\n",
-       "Room_Type 5      265\n",
-       "Room_Type 6      966\n",
-       "Room_Type 7      158\n",
-       "dtype: int64"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "room_type = pd.get_dummies(df['room_type_reserved'])\n",
-    "room_type.sum()"
+    "df['market_segment_type'] = LabelEncoder().fit_transform(df['market_segment_type'])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "957d68fc",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "INN00001    1\n",
-       "INN00002    1\n",
-       "INN00003    1\n",
-       "INN00004    1\n",
-       "INN00005    1\n",
-       "dtype: int64"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "booking_id = pd.get_dummies(df['Booking_ID'])\n",
-    "booking_id.sum().head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "id": "aa1d91ee",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Meal Plan 1     27835\n",
-       "Meal Plan 2      3305\n",
-       "Meal Plan 3         5\n",
-       "Not Selected     5130\n",
-       "dtype: int64"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "type_of_meal = pd.get_dummies(df['type_of_meal_plan'])\n",
-    "type_of_meal.sum()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "id": "ee06d1a3",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Aviation           125\n",
-       "Complementary      391\n",
-       "Corporate         2017\n",
-       "Offline          10528\n",
-       "Online           23214\n",
-       "dtype: int64"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "segment_type = pd.get_dummies(df['market_segment_type'])\n",
-    "segment_type.sum()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
    "id": "7e63ac69",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.drop(['Booking_ID', 'type_of_meal_plan', 'room_type_reserved', 'market_segment_type'], axis=1, inplace=True)"
+    "# df.drop(['Booking_ID', 'type_of_meal_plan', 'room_type_reserved'], axis=1, inplace=True)\n",
+    "# df.drop(['Booking_ID', 'type_of_meal_plan'], axis=1, inplace=True) no parameters accuracy score 0.7754295690526509 and 0.7583386933749885 with huber\n",
+    "# df.drop(['Booking_ID', 'room_type_reserved'], axis=1, inplace=True) no parameters accuracy score 0.67 and 0.7746025911972801 with huber\n",
+    "# df.drop(['Booking_ID'], axis=1, inplace=True) no parameters accuracy score 0.7665165855003216 and 0.771110906919048 with huber\n",
+    "# df.drop(['Booking_ID'], axis=1, inplace=True)\n",
+    "# df.drop(['Booking_ID', 'type_of_meal_plan', 'room_type_reserved'], axis=1, inplace=True) no parameters accuracy score 0.7723973169162914 and 0.7655058347882018 with huber\n",
+    "df.drop(['Booking_ID', 'type_of_meal_plan', 'room_type_reserved'], axis=1, inplace=True)"
    ]
   },
   {
@@ -715,7 +641,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "id": "25dd2669",
    "metadata": {},
    "outputs": [],
@@ -725,7 +651,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "id": "e9c444de",
    "metadata": {},
    "outputs": [],
@@ -736,17 +662,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "id": "a313b163",
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.30, random_state=101)"
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.30, random_state=1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 13,
    "id": "4c53c1e9",
    "metadata": {},
    "outputs": [],
@@ -757,7 +683,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 14,
    "id": "f5ec3718",
    "metadata": {},
    "outputs": [],
@@ -776,7 +702,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 15,
    "id": "9995dbc0",
    "metadata": {
     "scrolled": true
@@ -791,7 +717,7 @@
        "SGDClassifier()"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -816,7 +742,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 16,
    "id": "a50fcea9",
    "metadata": {},
    "outputs": [],
@@ -826,18 +752,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 17,
    "id": "d4ce2edf",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[  21, 3496],\n",
-       "       [   0, 7366]])"
+       "array([[1356, 2166],\n",
+       "       [ 378, 6983]])"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -848,17 +774,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 18,
    "id": "f5e5866c",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.6787650464026463"
+       "0.766240926215198"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -869,17 +795,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 19,
    "id": "de87e4f6",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "7387"
+       "8339"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -898,7 +824,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 20,
    "id": "8b39599f",
    "metadata": {},
    "outputs": [],
@@ -908,7 +834,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 21,
    "id": "805d83b4",
    "metadata": {},
    "outputs": [
@@ -921,7 +847,7 @@
        "SGDClassifier(alpha=0.001, loss='modified_huber')"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -932,7 +858,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 22,
    "id": "5743ed1e",
    "metadata": {},
    "outputs": [],
@@ -942,18 +868,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 23,
    "id": "6f6ef966",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[1898, 1619],\n",
-       "       [ 926, 6440]])"
+       "array([[ 624, 2898],\n",
+       "       [  88, 7273]])"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -964,17 +890,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 24,
    "id": "57f85e94",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.7661490397868235"
+       "0.7256271248736562"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -985,17 +911,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 25,
    "id": "147c85b9",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "8338"
+       "7897"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1005,9 +931,105 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b2fe8655",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "6f9a4ce9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# loss='log_loss' alpha=0.0001\n",
+    "SGD_model3 = SGDClassifier(loss='log_loss', alpha=0.0001)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "a34bf57e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<style>#sk-container-id-3 {color: black;background-color: white;}#sk-container-id-3 pre{padding: 0;}#sk-container-id-3 div.sk-toggleable {background-color: white;}#sk-container-id-3 label.sk-toggleable__label {cursor: pointer;display: block;width: 100%;margin-bottom: 0;padding: 0.3em;box-sizing: border-box;text-align: center;}#sk-container-id-3 label.sk-toggleable__label-arrow:before {content: \"▸\";float: left;margin-right: 0.25em;color: #696969;}#sk-container-id-3 label.sk-toggleable__label-arrow:hover:before {color: black;}#sk-container-id-3 div.sk-estimator:hover label.sk-toggleable__label-arrow:before {color: black;}#sk-container-id-3 div.sk-toggleable__content {max-height: 0;max-width: 0;overflow: hidden;text-align: left;background-color: #f0f8ff;}#sk-container-id-3 div.sk-toggleable__content pre {margin: 0.2em;color: black;border-radius: 0.25em;background-color: #f0f8ff;}#sk-container-id-3 input.sk-toggleable__control:checked~div.sk-toggleable__content {max-height: 200px;max-width: 100%;overflow: auto;}#sk-container-id-3 input.sk-toggleable__control:checked~label.sk-toggleable__label-arrow:before {content: \"▾\";}#sk-container-id-3 div.sk-estimator input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-3 div.sk-label input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-3 input.sk-hidden--visually {border: 0;clip: rect(1px 1px 1px 1px);clip: rect(1px, 1px, 1px, 1px);height: 1px;margin: -1px;overflow: hidden;padding: 0;position: absolute;width: 1px;}#sk-container-id-3 div.sk-estimator {font-family: monospace;background-color: #f0f8ff;border: 1px dotted black;border-radius: 0.25em;box-sizing: border-box;margin-bottom: 0.5em;}#sk-container-id-3 div.sk-estimator:hover {background-color: #d4ebff;}#sk-container-id-3 div.sk-parallel-item::after {content: \"\";width: 100%;border-bottom: 1px solid gray;flex-grow: 1;}#sk-container-id-3 div.sk-label:hover label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-3 div.sk-serial::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: 0;}#sk-container-id-3 div.sk-serial {display: flex;flex-direction: column;align-items: center;background-color: white;padding-right: 0.2em;padding-left: 0.2em;position: relative;}#sk-container-id-3 div.sk-item {position: relative;z-index: 1;}#sk-container-id-3 div.sk-parallel {display: flex;align-items: stretch;justify-content: center;background-color: white;position: relative;}#sk-container-id-3 div.sk-item::before, #sk-container-id-3 div.sk-parallel-item::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: -1;}#sk-container-id-3 div.sk-parallel-item {display: flex;flex-direction: column;z-index: 1;position: relative;background-color: white;}#sk-container-id-3 div.sk-parallel-item:first-child::after {align-self: flex-end;width: 50%;}#sk-container-id-3 div.sk-parallel-item:last-child::after {align-self: flex-start;width: 50%;}#sk-container-id-3 div.sk-parallel-item:only-child::after {width: 0;}#sk-container-id-3 div.sk-dashed-wrapped {border: 1px dashed gray;margin: 0 0.4em 0.5em 0.4em;box-sizing: border-box;padding-bottom: 0.4em;background-color: white;}#sk-container-id-3 div.sk-label label {font-family: monospace;font-weight: bold;display: inline-block;line-height: 1.2em;}#sk-container-id-3 div.sk-label-container {text-align: center;}#sk-container-id-3 div.sk-container {/* jupyter's `normalize.less` sets `[hidden] { display: none; }` but bootstrap.min.css set `[hidden] { display: none !important; }` so we also need the `!important` here to be able to override the default hidden behavior on the sphinx rendered scikit-learn.org. See: https://github.com/scikit-learn/scikit-learn/issues/21755 */display: inline-block !important;position: relative;}#sk-container-id-3 div.sk-text-repr-fallback {display: none;}</style><div id=\"sk-container-id-3\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>SGDClassifier(loss=&#x27;log_loss&#x27;)</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item\"><div class=\"sk-estimator sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-3\" type=\"checkbox\" checked><label for=\"sk-estimator-id-3\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">SGDClassifier</label><div class=\"sk-toggleable__content\"><pre>SGDClassifier(loss=&#x27;log_loss&#x27;)</pre></div></div></div></div></div>"
+      ],
+      "text/plain": [
+       "SGDClassifier(loss='log_loss')"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "SGD_model3.fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "dfb8cac6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "SGD_predictions3 = SGD_model3.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "9b33912e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[3173,  349],\n",
+       "       [3847, 3514]])"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "confusion_matrix(y_test, SGD_predictions3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "f32f669e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.614444546540476"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "accuracy_score(y_test, SGD_predictions3)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "57195c4f",
+   "id": "1aad9760",
    "metadata": {},
    "outputs": [],
    "source": []
