--- a/Hotel_Reservations_Prediction.ipynb
+++ b/Hotel_Reservations_Prediction.ipynb
@@ -2740,80 +2740,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c0350f7f",
-   "metadata": {},
-   "source": [
-    "### Plot ROC Score"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 82,
-   "id": "021c11bd",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Train ROC Score: 0.9993251901164878\n",
-      "Test ROC  Score: 0.9573087971187425\n"
-     ]
-    }
-   ],
-   "source": [
-    "from sklearn.metrics import precision_score, recall_score, roc_auc_score, roc_curve\n",
-    "\n",
-    "print(f'Train ROC Score: {roc_auc_score(y_train, train_rf_probs)}')\n",
-    "print(f'Test ROC  Score: {roc_auc_score(y_test, rf_probs)}')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 83,
-   "id": "ac431db2",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Baseline ROC AUC: 0.5\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(f'Baseline ROC AUC: {roc_auc_score(y_test, [1 for _ in range(len(y_test))])}')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "bc26434e",
-   "metadata": {},
-   "source": [
-    "## Evaluation of classifier\n",
-    "- 1. ROC AUC Curve\n",
-    "- 2. Confusion Matrix"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "dff76dff",
-   "metadata": {},
-   "source": [
-    "### Helper function to evaluate model"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0cadcf22",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
    "id": "410bea99",
    "metadata": {},
    "source": [
@@ -2848,7 +2774,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "ml-venv",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -2862,11 +2788,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.15 (main, Nov 24 2022, 14:31:59) \n[GCC 11.2.0]"
+   "version": "3.9.16 (main, Jan 11 2023, 16:16:36) [MSC v.1916 64 bit (AMD64)]"
   },
   "vscode": {
    "interpreter": {
-    "hash": "33c469f7d610799d12f369e866c64568ee0a8746d10a0a4ea7879c0286d05f92"
+    "hash": "ad2bdc8ecc057115af97d19610ffacc2b4e99fae6737bb82f5d7fb13d2f2c186"
    }
   }
  },
