updating  first cell

--- a/Hotel_Reservations_Prediction.ipynb
+++ b/Hotel_Reservations_Prediction.ipynb
@@ -1,13 +1,23 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "7fa2ef50",
    "metadata": {},
    "source": [
-    "math final project- group 3\n",
+    "### Math Final Project - Group 3\n",
     "\n",
-    "members: Narjes Amousoltani F., Aanandita Madan Chavan, Jorge Luis Galarraga Prince, Mark Kale, Abdullah Malik, Shreeya Shah, Sirjana Shrestha, Dushyant Tyagi"
+    "#### Members:\n",
+    "<ul>\n",
+    "    <li>Narjes Amousoltani F.</li>\n",
+    "    <li>Aanandita Madan Chavan</li>\n",
+    "    <li>Jorge Luis Galarraga Prince</li>\n",
+    "    <li>Mark Kale, Abdullah Malik</li>\n",
+    "    <li>Shreeya Shah</li>\n",
+    "    <li>Sirjana Shrestha</li>\n",
+    "    <li>Dushyant Tyagi</li>\n",
+    "</ul>"
    ]
   },
   {
