--- a/Hotel_Reservations_Prediction.ipynb
+++ b/Hotel_Reservations_Prediction.ipynb
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 52,
    "id": "71fdadb3",
    "metadata": {},
    "outputs": [],
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 53,
    "id": "17e2f88c",
    "metadata": {},
    "outputs": [],
@@ -501,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 54,
    "id": "8128fa61",
    "metadata": {},
    "outputs": [
@@ -511,7 +511,7 @@
        "array([1, 1, 0, ..., 1, 0, 1])"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -526,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 55,
    "id": "883a887b",
    "metadata": {},
    "outputs": [
@@ -536,7 +536,7 @@
        "array([1, 1, 0, ..., 1, 0, 1])"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3014,7 +3014,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 101,
    "id": "14619d9f",
    "metadata": {},
    "outputs": [],
@@ -3025,7 +3025,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 102,
    "id": "b3905536",
    "metadata": {},
    "outputs": [
@@ -3236,7 +3236,7 @@
        "4                       0       Canceled                       0  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 102,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3247,7 +3247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 103,
    "id": "a66af0aa",
    "metadata": {},
    "outputs": [
@@ -3257,7 +3257,7 @@
        "20"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 103,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3269,7 +3269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 104,
    "id": "70bd62d5",
    "metadata": {},
    "outputs": [
@@ -3293,7 +3293,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 104,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3308,7 +3308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 105,
    "id": "525b6f81",
    "metadata": {},
    "outputs": [],
@@ -3318,7 +3318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 106,
    "id": "a60309eb",
    "metadata": {},
    "outputs": [
@@ -3340,7 +3340,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 106,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3351,7 +3351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 107,
    "id": "32b5cc97",
    "metadata": {},
    "outputs": [],
@@ -3362,18 +3362,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 112,
    "id": "d439e037",
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.tree import DecisionTreeClassifier"
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "from sklearn import metrics\n",
+    "from sklearn.metrics import recall_score\n",
+    "from sklearn.metrics import precision_score\n",
+    "from sklearn import metrics"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 109,
    "id": "fe23f3e1",
    "metadata": {},
    "outputs": [],
@@ -3383,7 +3387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 110,
    "id": "d7199186",
    "metadata": {},
    "outputs": [
@@ -3404,17 +3408,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "id": "b821e3d3",
+   "execution_count": 111,
+   "id": "df5b0a23",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[2877,  645],\n",
+       "       [ 754, 6607]], dtype=int64)"
+      ]
+     },
+     "execution_count": 111,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "from sklearn import metrics"
+    "from sklearn.metrics import confusion_matrix\n",
+    "cm = confusion_matrix(y_test, y_pred)\n",
+    "cm"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 72,
    "id": "a435f343",
    "metadata": {},
    "outputs": [
@@ -3422,7 +3440,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 0.8716346595607829\n"
+      "Accuracy: 0.8709914545621612\n"
      ]
     }
    ],
@@ -3432,7 +3450,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 113,
+   "id": "ea19f561",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The recall score is  0.8975682651813612\n",
+      "The precision score is  0.9110590182018753\n"
+     ]
+    }
+   ],
+   "source": [
+    "recallScore = recall_score(y_test, y_pred)\n",
+    "print(\"The recall score is \", recallScore)\n",
+    "\n",
+    "precisionScore = precision_score(y_test, y_pred)\n",
+    "print(\"The precision score is \", precisionScore)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 114,
    "id": "9d62d116",
    "metadata": {},
    "outputs": [
@@ -3454,7 +3495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 115,
    "id": "49097cee",
    "metadata": {},
    "outputs": [
@@ -3487,7 +3528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 116,
    "id": "36be36f4",
    "metadata": {},
    "outputs": [
@@ -3495,7 +3536,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The best score is :  0.8645634712655799\n",
+      "The best score is :  0.8643665588473359\n",
       "The best estimator is :  DecisionTreeClassifier(criterion='entropy')\n"
      ]
     }
@@ -3530,7 +3571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 117,
    "id": "91f8e498",
    "metadata": {},
    "outputs": [
@@ -3538,7 +3579,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 0.87218597813103\n"
+      "Accuracy: 0.8727372967012772\n"
      ]
     }
    ],
@@ -3552,7 +3593,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 118,
+   "id": "dcd950c6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The recall score is  0.899062627360413\n",
+      "The precision score is  0.9115702479338843\n"
+     ]
+    }
+   ],
+   "source": [
+    "recallScore = recall_score(y_test, y_pred)\n",
+    "print(\"The recall score is \", recallScore)\n",
+    "\n",
+    "precisionScore = precision_score(y_test, y_pred)\n",
+    "print(\"The precision score is \", precisionScore)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 119,
+   "id": "4560cdd7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[2880,  642],\n",
+       "       [ 743, 6618]], dtype=int64)"
+      ]
+     },
+     "execution_count": 119,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import confusion_matrix\n",
+    "cm = confusion_matrix(y_test, y_pred)\n",
+    "cm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 120,
    "id": "7486b5c8",
    "metadata": {},
    "outputs": [
@@ -3601,7 +3689,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 121,
    "id": "d093cfde",
    "metadata": {},
    "outputs": [],
@@ -3611,7 +3699,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 122,
    "id": "2e893f1a",
    "metadata": {},
    "outputs": [
@@ -3633,7 +3721,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 122,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3644,7 +3732,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 81,
    "id": "da985686",
    "metadata": {},
    "outputs": [],
@@ -3654,7 +3742,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 82,
    "id": "2442256a",
    "metadata": {},
    "outputs": [],
@@ -3664,7 +3752,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 83,
    "id": "b93b2c9f",
    "metadata": {},
    "outputs": [
@@ -3700,7 +3788,7 @@
        " 'market_segment_type_Online']"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 83,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3713,7 +3801,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 84,
    "id": "953c02fb",
    "metadata": {},
    "outputs": [
@@ -3741,7 +3829,7 @@
        " 'market_segment_type_Online']"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 84,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3754,7 +3842,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 85,
    "id": "d7d41a47",
    "metadata": {},
    "outputs": [
@@ -4016,7 +4104,7 @@
        " 'market_segment_type_Complementary']"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 85,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4029,7 +4117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 86,
    "id": "72930c0a",
    "metadata": {},
    "outputs": [
@@ -4057,7 +4145,7 @@
        " 'market_segment_type_Online']"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 86,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4070,7 +4158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 87,
    "id": "2fef45c0",
    "metadata": {},
    "outputs": [
@@ -4086,7 +4174,7 @@
        " 'no_of_special_requests']"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 87,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4099,7 +4187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 88,
    "id": "197a7ab9",
    "metadata": {},
    "outputs": [
@@ -4116,7 +4204,7 @@
        "  'avg_price_per_room'])"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 88,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4128,7 +4216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 89,
    "id": "c33f5815",
    "metadata": {},
    "outputs": [
@@ -4461,16 +4549,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>no_of_weekend_nights</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
        "      <td>no_of_week_nights</td>\n",
        "      <td>True</td>\n",
        "      <td>False</td>\n",
@@ -4480,7 +4558,7 @@
        "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>7</th>\n",
+       "      <th>6</th>\n",
        "      <td>market_segment_type_Complementary</td>\n",
        "      <td>True</td>\n",
        "      <td>True</td>\n",
@@ -4490,7 +4568,7 @@
        "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>8</th>\n",
+       "      <th>7</th>\n",
        "      <td>arrival_month</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
@@ -4500,7 +4578,7 @@
        "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>9</th>\n",
+       "      <th>8</th>\n",
        "      <td>room_type_reserved_Room_Type 7</td>\n",
        "      <td>True</td>\n",
        "      <td>False</td>\n",
@@ -4510,8 +4588,18 @@
        "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>10</th>\n",
+       "      <th>9</th>\n",
        "      <td>room_type_reserved_Room_Type 6</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>required_car_parking_space</td>\n",
        "      <td>True</td>\n",
        "      <td>False</td>\n",
        "      <td>True</td>\n",
@@ -4529,27 +4617,27 @@
        "2                           lead_time   True   True      False           True   \n",
        "3                  avg_price_per_room   True   True      False           True   \n",
        "4                      repeated_guest   True   True       True          False   \n",
-       "5                no_of_weekend_nights   True  False       True           True   \n",
-       "6                   no_of_week_nights   True  False      False           True   \n",
-       "7   market_segment_type_Complementary   True   True       True          False   \n",
-       "8                       arrival_month  False  False       True           True   \n",
-       "9      room_type_reserved_Room_Type 7   True  False       True          False   \n",
-       "10     room_type_reserved_Room_Type 6   True  False       True          False   \n",
+       "5                   no_of_week_nights   True  False      False           True   \n",
+       "6   market_segment_type_Complementary   True   True       True          False   \n",
+       "7                       arrival_month  False  False       True           True   \n",
+       "8      room_type_reserved_Room_Type 7   True  False       True          False   \n",
+       "9      room_type_reserved_Room_Type 6   True  False       True          False   \n",
+       "10         required_car_parking_space   True  False       True          False   \n",
        "\n",
        "    LightGBM  Total  \n",
        "1      False      4  \n",
        "2       True      4  \n",
        "3       True      4  \n",
        "4      False      3  \n",
-       "5      False      3  \n",
-       "6       True      3  \n",
-       "7      False      3  \n",
-       "8       True      3  \n",
+       "5       True      3  \n",
+       "6      False      3  \n",
+       "7       True      3  \n",
+       "8      False      2  \n",
        "9      False      2  \n",
        "10     False      2  "
       ]
      },
-     "execution_count": 45,
+     "execution_count": 89,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4571,7 +4659,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 90,
    "id": "f3da2a29",
    "metadata": {},
    "outputs": [
@@ -4597,7 +4685,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 91,
    "id": "cd098364",
    "metadata": {},
    "outputs": [
@@ -4605,7 +4693,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 0.84682532389966\n"
+      "Accuracy: 0.8477441881834054\n"
      ]
     }
    ],
@@ -4616,26 +4704,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
-   "id": "e414ba8b",
+   "execution_count": 92,
+   "id": "07f3583e",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Prediction: [1]\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\aanan\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.10_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python310\\site-packages\\sklearn\\base.py:420: UserWarning: X does not have valid feature names, but DecisionTreeClassifier was fitted with feature names\n",
-      "  warnings.warn(\n"
-     ]
+     "data": {
+      "text/plain": [
+       "array([[2765,  757],\n",
+       "       [ 900, 6461]], dtype=int64)"
+      ]
+     },
+     "execution_count": 92,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
+   "source": [
+    "from sklearn.metrics import confusion_matrix\n",
+    "cm = confusion_matrix(y_test, y_pred)\n",
+    "cm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "id": "e414ba8b",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# features = np.array([[100, 10.15, 1, 0,0]])\n",
     "# # using inputs to predict the output\n",
@@ -4645,7 +4741,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 94,
    "id": "2bcb87c0",
    "metadata": {},
    "outputs": [],
@@ -4656,7 +4752,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 95,
    "id": "929a10d6",
    "metadata": {},
    "outputs": [
@@ -4665,7 +4761,7 @@
      "output_type": "stream",
      "text": [
       "[0 1 0 ... 1 0 0]\n",
-      "Accuracy: 0.8639161995773225\n"
+      "Accuracy: 0.8631811081503262\n"
      ]
     }
    ],
@@ -4680,7 +4776,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 96,
+   "id": "1c21d7fc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[2824,  698],\n",
+       "       [ 791, 6570]], dtype=int64)"
+      ]
+     },
+     "execution_count": 96,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import confusion_matrix\n",
+    "cm = confusion_matrix(y_test, y_pred)\n",
+    "cm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "id": "2670967a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The recall score is  0.8925417742154599\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import recall_score\n",
+    "recallScore = recall_score(y_test, y_pred)\n",
+    "print(\"The recall score is \", recallScore)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "id": "82429460",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The precision score is  0.9039625756741883\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import precision_score\n",
+    "precisionScore = precision_score(y_test, y_pred)\n",
+    "print(\"The precision score is \", precisionScore)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
    "id": "af1ae1f9",
    "metadata": {},
    "outputs": [],
